syntax = "proto3";
package iot.registration;

service RegistrationService {
    rpc Register(RegistrationRequest) returns (RegistrationResponse);
};

message RegistrationRequest {}
message RegistrationResponse {
    string client_id = 1;
}
