syntax = "proto3";
package frontend.devicecontrol;
import "frontend_types.proto";

service FrontendDeviceControlService{
    rpc ControlDevice(DeviceControlRequest) returns (DeviceControlResponse);
};

message DeviceControlRequest{
    string device_uuid = 1;
    types.Capability capability = 2;
}

message DeviceControlResponse{
    DeviceControlResult result = 1;
}

enum DeviceControlResult {
    UNKNOWN = 0;
    SUCCESS = 1;
}
